Chart-tooltip wrapper z-index fixed

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ body {
   background-color: #27293d !important;
 }
 
+.recharts-tooltip-wrapper{
+  z-index: 100;
+}
+
 .__react_component_tooltip.show{
   background-color: white !important;
   opacity: 1 !important;
